--- a/app/application/index.html
+++ b/app/application/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Authme</title>
-		<meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly@1.4.0.css" />
 		<link rel="stylesheet" href="../.././src/animate@2.4.1.css" />
@@ -17,8 +16,12 @@
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body>
-		<div class="popup">
+		<div class="popup offline">
 			Authme runs in offline mode. The app will work fine, but the app can't look for new updates!
+			<a class="popup_link" onclick="this.parentElement.style.display='none';">Close</a>
+		</div>
+		<div class="popup online">
+			Authme runs in online mode. The app reconnected to the internet, you can look for new updates!
 			<a class="popup_link" onclick="this.parentElement.style.display='none';">Close</a>
 		</div>
 		<div class="center">
@@ -29,7 +32,12 @@
 				Choose a file
 			</button>
 			<br />
-			<button class="button1 button" id="save" onclick="save()">Save config</button>
+			<p class="text3" id="information">
+				<span id="docs">More information: <a href="#" onclick="link0()">Docs</a> </span>
+				<span id="sample">For testing: <a href="#" onclick="link1()">Sample import file</a></span>
+			</p>
+			<br />
+			<button class="button1 button" id="save" onclick="save()">Save codes</button>
 			<br />
 			<input
 				name="search"
