--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -41,12 +41,12 @@
 			<!-- settings -->
 			<div id="setting" class="tabcontent">
 				<h3>Launch on startup</h3>
-				<p class="text3">Start the app after the operating system loaded. The app will start on the tray (Windows only).</p>
+				<p class="text3">Start the app after the operating system loaded. The app will start on the tray (Ideal for Windows).</p>
 				<button class="button1" id="but0" onclick="startup()">-</button>
 				<br />
 				<hr />
 				<h3>Close app to tray</h3>
-				<p class="text3">On closing the app will not quit. You can open the app from the tray menu (Windows only).</p>
+				<p class="text3">On closing the app will not quit. You can open the app from the tray menu (Ideal for Windows).</p>
 				<button class="button1" id="but2" onclick="tray()">-</button>
 				<br />
 				<hr />
