--- a/app/import/index.html
+++ b/app/import/index.html
@@ -5,6 +5,8 @@
 		<meta charset="UTF-8" />
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
+		<script defer src="./src/js/qr.js"></script>
+		<script defer src="./src/js/ga.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly@1.4.0.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
@@ -15,33 +17,44 @@
 		<div class="center">
 			<h1>Authme</h1>
 			<h2>Import</h2>
-			<p class="text3">You can import from Google Authenticator here.</p>
+			<p class="text3">You can import from QR code(s) and Google Authenticator QR code(s).</p>
 			<button class="button1" onclick="hide()">Close</button>
 
 			<h2>Instructions</h2>
 
 			<details class="details1" open>
-				<summary class="summary1">1. Getting started</summary>
+				<summary class="summary1">Getting started</summary>
 				<p class="text3">
-					If you don't know what to do please read the documentation and come back here (Recommended for most users):
+					If you don't know what to do please read the documentation and come back here. Recommended for most users:
 					<br />
 					<a href="#" onclick="link0()">Authme Import Documentation</a>
-					<br />
-					<br />
-					If you want to create your file yourself you can find more informations on GitHub in the extract README (Recommended for techincal
-					users):
-					<br />
-					<a href="#" onclick="link1()">Authme Extract README</a>
 				</p>
 			</details>
 
 			<div class="choose">
-				<h2 id="choose">Choose option</h2>
-				<p class="text3">Google Authenticator</p>
-				<button class="button1" id="but0" onclick="import_qrcode()">Import from Google Authenticator QR code(s)</button>
+				<h2 id="choose">Import</h2>
+				<p class="text3">QR code(s)</p>
+				<details class="details1" id="dt">
+					<summary class="summary1">Import instructions</summary>
+					<p class="text3">
+						This option don't requires anything special.
+						<br />
+						Just screenshot the QR code(s) and import them.
+					</p>
+				</details>
+				<button class="button1" id="but0" onclick="qr_import()">Import from QR code(s)</button>
 				<br />
-				<p class="text3">Stand alone</p>
-				<button class="button1" id="but0" onclick="import_sa_qrcode()">Import from stand alone QR code(s)</button>
+				<h2 id="choose">Advanced import</h2>
+				<p class="text3">Google Authenticator QR code(s)</p>
+				<details class="details1" id="dt">
+					<summary class="summary1">Advanced import instructions</summary>
+					<p class="text3">
+						This option requires Python. Please check: Top Menu > Info > About.
+						<br />
+						If you see "Not installed" install Python, restart the app and come back here.
+					</p>
+				</details>
+				<button class="button1" id="but0" onclick="ga_import()">Import from Google Authenticator QR code(s)</button>
 			</div>
 		</div>
 	</body>
