--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -7,6 +7,7 @@
 		<script defer src="./src/js/convert.js"></script>
 		<script defer src="./src/js/export.js"></script>
 		<script defer src="./src/js/index.js"></script>
+		<script defer src="./src/js/save.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly@1.4.0.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
