--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="center">
 			<h1>Authme</h1>
-			<h2>Edit (WIP - Some things don't work!)</h2>
+			<h2>Edit</h2>
 			<p class="text3">You can edit, delete or add more codes.</p>
 			<button class="button1" onclick="hide()">Close</button>
 			<div class="rollback">
@@ -29,12 +29,13 @@
 				<h3>Load saved code</h3>
 				<p class="text3">You can load the codes you saved.</p>
 				<button class="button1" onclick="loadCodes()">Load codes</button>
+				<p class="warning">This feature is WIP! Use it at your own risk!</p>
 			</div>
 			<div class="afterLoad">
 				<h3>Edit mode</h3>
 				<p class="text3">Now you can modify existing codes or add more.</p>
 				<button class="button1" onclick="createSave()">Save</button>
-
+				<!-- codes -->
 				<div class="container"></div>
 			</div>
 		</div>
