--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -31,8 +31,9 @@
 				<br />
 				<h3>Menu</h3>
 				<p class="text3">Choose a configuration menu.</p>
-				<button id="settings" class="button1 settings" onclick="menu(event, 'setting')">Settings</button>
+				<button id="setting " class="button1 settings" onclick="menu(event, 'setting')">Settings</button>
 				<button id="shortcuts " class="button1 shortcuts" onclick="menu(event, 'shortcuts')">Shortcuts</button>
+				<button id="experimental " class="button1 experimental" onclick="menu(event, 'experimental')">Experimental</button>
 				<button id="about" class="button1 about" onclick="about()">About</button>
 				<br />
 				<hr />
@@ -41,12 +42,12 @@
 			<!-- settings -->
 			<div id="setting" class="tabcontent">
 				<h3>Launch on startup</h3>
-				<p class="text3">Start the app after the operating system loaded. The app will start on the tray (Ideal for Windows).</p>
+				<p class="text3">Start the app after the operating system loaded. The app will start on the tray.</p>
 				<button class="button1" id="but0" onclick="startup()">-</button>
 				<br />
 				<hr />
 				<h3>Close app to tray</h3>
-				<p class="text3">On closing the app will not quit. You can open the app from the tray menu (Ideal for Windows).</p>
+				<p class="text3">On closing the app will not quit. You can open the app from the tray menu.</p>
 				<button class="button1" id="but2" onclick="tray()">-</button>
 				<br />
 				<hr />
@@ -644,6 +645,14 @@
 						</div>
 					</div>
 				</div>
+			</div>
+
+			<!-- experimental -->
+			<div id="experimental" class="tabcontent">
+				<h3>Edit codes</h3>
+				<p class="text3">Edit your saved codes. You can edit, delete or add more codes.</p>
+				<button class="button1" id="but14" onclick="edit()">Open</button>
+				<p class="warning">This feature is WIP! Use it at your own risk!</p>
 			</div>
 		</div>
 	</body>
