--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -742,6 +742,15 @@
 				<h3>Edit codes</h3>
 				<p class="text3">Edit your saved codes. You can edit, delete or add more codes.</p>
 				<button class="button1" id="but14" onclick="edit()">Open</button>
+				<p class="unstable">This feature is WIP! It might be unstable or buggy!</p>
+				<br />
+				<hr />
+				<h3>Codes time offset</h3>
+				<p class="text3">
+					You can set a time offset for the codes, submit with enter. Specify the time in seconds, it can be a positive or a negative
+					number.
+				</p>
+				<input type="number" id="inp0" class="input1 offset" max="1000" min="-1000" maxlength="5" step="5" value="0" />
 				<p class="warning">This feature is WIP! Use it at your own risk!</p>
 			</div>
 		</div>
