--- a/app/confirm/index.html
+++ b/app/confirm/index.html
@@ -23,7 +23,7 @@
 		</div>
 
 		<!-- content -->
-		<div class="center">
+		<div class="bg-gray-700 w-3/5 m-auto mt-60 mb-32 rounded-2xl relative text-center">
 			<h1>Authme</h1>
 			<div class="mx-auto rounded-2xl mb-12 bg-gray-800 w-2/3" id="choose">
 				<h3 class="pt-3">Welcome back!</h3>
@@ -47,20 +47,22 @@
 						</button>
 					</div>
 					<div class="mx-auto pb-3">
-						<details class="mb-5 transform ease-in duration-200">
+						<details class="mb-5 transform ease-in duration-200" onclick="showMoreOptions()">
 							<summary class="font-bold mb-3 cursor-pointer">More options</summary>
-							<div>
-								<h3>Forgot password?</h3>
-								<h4>If you have a backup code you can recover your password. If you don't have one then try to think harder.</h4>
-								<button onclick="forgotPassword()" class="buttoni">
-									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-									</svg>
-									Confirm
-								</button>
-							</div>
 						</details>
 					</div>
+				</div>
+			</div>
+			<div id="more_options" class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20 pb-10 pt-1 animation invisible hidden">
+				<div>
+					<h3>Forgot password?</h3>
+					<h4>If you have a backup code you can recover your password. If you don't have one then try to think harder.</h4>
+					<button onclick="forgotPassword()" class="buttoni">
+						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+						</svg>
+						Confirm
+					</button>
 				</div>
 			</div>
 		</div>
