--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -23,12 +23,12 @@
 		</div>
 
 		<!-- content -->
-		<div class="center">
+		<div class="bg-gray-700 w-3/5 m-auto mt-40 mb-60 rounded-2xl relative text-center">
 			<h1>Authme</h1>
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-16" id="choose">
 				<h3 class="pt-3">Welcome to Authme!</h3>
 				<h4 id="text">Please create a password to encrypt your 2FA codes!</h4>
-				<div class="flex flex-row justify-center gap-3 pb-5 select-none">
+				<div class="flex flex-row flex-wrap justify-center gap-3 pb-5 select-none">
 					<div class="flex flex-col">
 						<label class="mb-1" id="password_label1">Password</label>
 						<input class="input1" type="password" id="password_input1" spellcheck="false" />
@@ -60,36 +60,44 @@
 				</button>
 
 				<div class="mx-auto pb-3">
-					<details class="mb-5 transform ease-in duration-200">
+					<details class="mb-5 transform ease-in duration-200" onclick="showMoreOptions()">
 						<summary class="font-bold mb-3 cursor-pointer">More options</summary>
-						<div>
-							<h3>Don't require password</h3>
-							<h4>If you don't want to type in your password every time you launch Authme.</h4>
-							<button onclick="noPassword()" class="buttoni">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-								</svg>
-								Confirm
-							</button>
-							<h3>Backup key</h3>
-							<h4>In case you forget your password you can use this backup key to get back your codes.</h4>
-							<button onclick="generateKey()" class="buttoni">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
-								</svg>
-								Generate key
-							</button>
-							<h3>Use new encryption method</h3>
-							<h4>A new more secure encryption method for your codes (Default after 2.7.0).</h4>
-							<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
-								<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
-									<input checked onclick="encryptionMethodToggle()" id="tgl0" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
-									<label for="tgl0" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label>
-								</div>
-								<span id="tgt0" class="text-black text-xl">On</span>
-							</div>
-						</div>
 					</details>
+				</div>
+			</div>
+			<div>
+				<div id="more_options" class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20 pb-10 animation invisible hidden">
+					<h3 class="pt-5">Don't require password</h3>
+					<h4>If you don't want to type in your password every time you launch Authme.</h4>
+					<button onclick="noPassword()" class="buttoni mb-7">
+						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+						</svg>
+						Confirm
+					</button>
+
+					<hr />
+
+					<h3>Backup key</h3>
+					<h4>In case you forget your password you can use this backup key to get back your codes.</h4>
+					<button onclick="generateKey()" class="buttoni mb-7">
+						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
+						</svg>
+						Generate key
+					</button>
+
+					<hr />
+
+					<h3>Use new encryption method</h3>
+					<h4>A new more secure encryption method for your codes (Default after 2.7.0).</h4>
+					<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
+						<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
+							<input checked onclick="encryptionMethodToggle()" id="tgl0" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
+							<label for="tgl0" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label>
+						</div>
+						<span id="tgt0" class="text-black text-xl">On</span>
+					</div>
 				</div>
 			</div>
 		</div>
