--- a/app/export/index.html
+++ b/app/export/index.html
@@ -4,13 +4,11 @@
 		<title>Authme</title>
 		<meta charset="UTF-8" />
 		<!-- js -->
-		<script defer src="./src/js/convert.js"></script>
 		<script defer src="./src/js/index.js"></script>
 		<script defer src="./src/js/export.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly.css" />
 		<link rel="stylesheet" href="../.././src/tailwind.css" />
-		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
@@ -24,22 +22,26 @@
 			</div>
 		</div>
 
-		<!-- content -->
-		<div class="center">
-			<h1 class="h1">Authme</h1>
-			<h2 class="h2">Export</h2>
-			<p class="text3 p0">You can export everything form your saved config.</p>
-			<button class="buttoni" onclick="hide()">
+		<!-- header -->
+		<div class="mx-auto rounded-2xl bg-gray-700 w-3/5 mt-40 text-center">
+			<img src="../../img/header.png" class="h-16 w-16 relative top-5" />
+			<h2>Export</h2>
+			<h4>You can export everything form your saved config.</h4>
+			<button class="buttoni mb-6" onclick="hide()">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
 				</svg>
 				Close window
 			</button>
+		</div>
+
+		<!-- content -->
+		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center">
 			<!-- before export -->
-			<div class="before_export mx-auto rounded-2xl bg-gray-800 w-2/3">
-				<h2 class="pt-3">Export code(s)</h2>
+			<div class="before_export mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20">
+				<h2 class="pt-5">Export code(s)</h2>
 				<h3>If you saved your config you can export the secrets and the QR code(s).</h3>
-				<button class="buttoni but1 mb-4" id="but0" onclick="expChooser()">
+				<button class="buttoni but1 mb-5" id="but0" onclick="expChooser()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16V4m0 0L3 8m4-4l4 4m6 0v12m0 0l4-4m-4 4l-4-4" />
 					</svg>
@@ -47,11 +49,11 @@
 				</button>
 			</div>
 			<!-- after export -->
-			<div class="after_export">
-				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3">
-					<h2 class="pt-3">Save exported code(s)</h2>
+			<div class="after_export hidden">
+				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20">
+					<h2 class="pt-5">Save exported code(s)</h2>
 					<h3>Save your exported data as a file to use it elsewhere.</h3>
-					<div class="flex flex-row">
+					<div class="flex flex-row justify-center gap-3 flex-wrap">
 						<div>
 							<button class="buttoni" id="but1" onclick="saveFile()">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -59,7 +61,7 @@
 								</svg>
 								Save as .txt
 							</button>
-							<p class="mt-3 pb-3">Ideal to import for Authme or for Authme Web.</p>
+							<h5 class="text-3 m-3">Ideal to import for Authme or for Authme Web.</h5>
 						</div>
 						<div>
 							<button class="buttoni" id="but2" onclick="saveQrCodes()">
@@ -68,15 +70,11 @@
 								</svg>
 								Save as .html
 							</button>
-							<p class="mt-3 pb-3 relative right-3">Ideal for scanning QR codes or for security backup.</p>
+							<h5 class="m-3">Ideal for scanning QR codes or for security backup.</h5>
 						</div>
 					</div>
 				</div>
-
-				<br />
-				<textarea class="blur" readonly="readonly" id="result" cols="30" rows="10"></textarea>
 			</div>
-			<!-- qr codes -->
 		</div>
 	</body>
 </html>
