--- a/app/import/index.html
+++ b/app/import/index.html
@@ -24,20 +24,23 @@
 			</div>
 		</div>
 
-		<!-- content -->
-		<div class="center">
-			<h1>Authme</h1>
+		<!-- header -->
+		<div class="mx-auto rounded-2xl bg-gray-700 w-3/5 text-center mt-40">
+			<img src="../../img/header.png" class="h-16 w-16 relative top-5" />
 			<h2>Import</h2>
-			<p class="text3">You can import from QR code(s) and Google Authenticator QR code(s).</p>
-			<button class="buttoni" onclick="hide()">
+			<h4>You can import from QR code(s) and Google Authenticator QR code(s). You can use your webcam by turning on an experimental feature in settings.</h4>
+			<button class="buttoni mb-6" onclick="hide()">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
 				</svg>
 				Close window
 			</button>
+		</div>
 
-			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3" id="choose">
-				<h2 class="pt-3">Instructions</h2>
+		<!-- content -->
+		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center">
+			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-20 mt-20" id="choose">
+				<h2 class="pt-5">Instructions</h2>
 				<h3>If you don't know what to do please read the documentation and come back here!</h3>
 				<button class="buttoni" id="but0" onclick="onlineDocs()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -45,16 +48,15 @@
 					</svg>
 					Read documentation
 				</button>
-				<br />
 			</div>
 
 			<div class="choose">
-				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3" id="choose">
-					<h2 class="pt-3">Import</h2>
+				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-20" id="choose">
+					<h2 class="pt-5">Import</h2>
 					<h3>QR code(s)</h3>
 					<details class="details1" id="dt">
 						<summary class="summary1">Instructions</summary>
-						<p class="text3">
+						<h4>
 							Just screenshot the QR code(s) you want to import, save them on your computer, and choose the image(s) you saved.
 							<br />
 							<br />
@@ -62,22 +64,38 @@
 							<br />
 							<br />
 							<a href="#qrLink" onclick="qrLink()">Detailed steps</a>
-						</p>
+						</h4>
 					</details>
-					<button class="buttoni" id="but0" onclick="qrImport()">
+					<div class="flex flex-row justify-center gap-3 flex-wrap">
+						<button class="buttoni" id="but0" onclick="qrImport()">
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v1m6 11h2m-6 0h-2v4m0-11v3m0 0h.01M12 12h4.01M16 20h4M4 12h4m12 0h.01M5 8h2a1 1 0 001-1V5a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1zm12 0h2a1 1 0 001-1V5a1 1 0 00-1-1h-2a1 1 0 00-1 1v2a1 1 0 001 1zM5 20h2a1 1 0 001-1v-2a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1z" />
+							</svg>
+							Choose image(s)
+						</button>
+						<button class="buttoni hidden mb-5" id="but2" onclick="qrCamera()">
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z" />
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 13a3 3 0 11-6 0 3 3 0 016 0z" />
+							</svg>
+							Use webcam
+						</button>
+					</div>
+					<video id="qrCamera" class="hidden mx-auto" autoplay></video>
+					<button class="buttoni mb-5 mt-5 hidden" id="qrStop">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v1m6 11h2m-6 0h-2v4m0-11v3m0 0h.01M12 12h4.01M16 20h4M4 12h4m12 0h.01M5 8h2a1 1 0 001-1V5a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1zm12 0h2a1 1 0 001-1V5a1 1 0 00-1-1h-2a1 1 0 00-1 1v2a1 1 0 001 1zM5 20h2a1 1 0 001-1v-2a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1z" />
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
 						</svg>
-						Choose image(s)
+						Stop
 					</button>
-					<br />
 				</div>
+
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-20" id="choose">
-					<h2 class="pt-3">Advanced import</h2>
+					<h2 class="pt-5">Advanced import</h2>
 					<h3>Google Authenticator QR code(s)</h3>
 					<details class="details1" id="dt">
 						<summary class="summary1">Instructions</summary>
-						<p class="text3">
+						<h4>
 							Take a picture of the export QR code(s) in your Google Authenticator app, transfer them on your computer, and choose the image(s) you transferred.
 							<br />
 							<br />
@@ -85,15 +103,31 @@
 							<br />
 							<br />
 							<a href="#gaLink" onclick="gaLink()">Detailed steps</a>
-						</p>
+						</h4>
 					</details>
-					<button class="buttoni" id="but1" onclick="gaImport()">
-						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 512 512" fill="currentColor">
-							<path d="M473.16 221.48l-2.26-9.59H262.46v88.22H387c-12.93 61.4-72.93 93.72-121.94 93.72-35.66 0-73.25-15-98.13-39.11a140.08 140.08 0 01-41.8-98.88c0-37.16 16.7-74.33 41-98.78s61-38.13 97.49-38.13c41.79 0 71.74 22.19 82.94 32.31l62.69-62.36C390.86 72.72 340.34 32 261.6 32c-60.75 0-119 23.27-161.58 65.71C58 139.5 36.25 199.93 36.25 256s20.58 113.48 61.3 155.6c43.51 44.92 105.13 68.4 168.58 68.4 57.73 0 112.45-22.62 151.45-63.66 38.34-40.4 58.17-96.3 58.17-154.9 0-24.67-2.48-39.32-2.59-39.96z" />
+					<div class="flex flex-row justify-center gap-3 flex-wrap">
+						<button class="buttoni" id="but1" onclick="gaImport()">
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v1m6 11h2m-6 0h-2v4m0-11v3m0 0h.01M12 12h4.01M16 20h4M4 12h4m12 0h.01M5 8h2a1 1 0 001-1V5a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1zm12 0h2a1 1 0 001-1V5a1 1 0 00-1-1h-2a1 1 0 00-1 1v2a1 1 0 001 1zM5 20h2a1 1 0 001-1v-2a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1z" />
+							</svg>
+							Choose image(s)
+						</button>
+						<button class="buttoni hidden mb-5" id="but3" onclick="gaCamera()">
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z" />
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 13a3 3 0 11-6 0 3 3 0 016 0z" />
+							</svg>
+							Use webcam
+						</button>
+					</div>
+					<video id="gaCamera" class="hidden mx-auto" autoplay></video>
+					<button class="buttoni mb-5 mt-5 hidden" id="gaStop">
+						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
 						</svg>
-						Choose image(s)
+						Stop
 					</button>
-					<br />
+					</div>
 				</div>
 			</div>
 		</div>
